# python-playground

./: df.csv  hoge.pickle  install.sh  pyproject.toml
import-experiments/: main.py  pyproject.toml
import-experiments/src/data/datasets/: tsv.py
import-experiments/src/model/: bert.py
import-experiments/tests/: test_import_experiments.py
src/: _youtube-api.py  a.py  abc215.py  aclpub_check.py  ai-b-task1.py  amida.py  break.py  capature.py  clone-reference.py  concurrent-loading.py  data_analytics.py  data_analytics2_1.py  default-argument.py  demo_def2word.py  double_tqdm.py  exp_ginza.py  f_seek.py  flock.py  fopen-iter-update.py  forloop_del.py  hoge.csv  hoge.py  inherit_dataclass.py  label2id.py  labs.py  list-in-list.py  list-in.py  list-slice-overload.py  mid-random.py  multiprocess.py  numpy-example.py  numpy-initialize-array.py  omegaconf-yaml-text.py  perm.py  pickle_test.py  pool_manager.py  popcount.py  raise-any-value.py  randperm.py  sentence-tokenizer0.py  (+11 more)
src/a/: fuga.py  hoge.py  piyo.py
