[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.4"
pandas = "^1.0.3"
tweepy = "^3.9.0"
hydra-core = "^1.0.6"
pdfplumber = "^0.5.28"
termcolor = "^1.1.0"
tqdm = "^4.61.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
