[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.x"
pandas = "^1.3.5"
numpy = "^1.21.5"
tweepy = "^4.4.0"
hydra-core = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"