[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.x"
pandas = "^1.3.5"
numpy = "^1.21.5"
tweepy = "^4.4.0"
hydra-core = "^1.1.1"
pdfplumber = "^0.5.28"
termcolor = "^1.1.0"
tqdm = "^4.61.0"
ginza = "^4.0.6"
networkx = "^2.6.1"
pygraphviz = "^1.7"
defsent = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"